# Pinetime

./: .gitignore  CMakeLists.txt  FS.md  README.md  RESEARCH.md  b.sh  bdfu.sh  bdfup.sh  bp.sh  bp_boot.sh  p.sh  pboot.sh  pp.sh
.github/workflows/: dev_build.yml  main.yml
bootloader/: create_dfu.sh  create_image.sh
doc/: buildAndProgram.md  buildWithDocker.md  filesInReleaseNotes.md
doc/gadgetbridge/: instalation.md
docker/: Dockerfile  build.sh  post_build.sh.in
resources/: convert.sh  images_copyrights.md  pinetile-lite.res  pinetile-lite_s.res  pinetime-lite.res  pinetime-lite_0.2.0.res  pinetime-lite_1.0.2.res  pinetime-lite_1.0.3.res  res_build.py  resource.json
resources/fonts/: Pinetime Sys 20.json  Pinetime Sys 48.json
resources/gimp/: gimp_install_plugin.md
resources/gimp/Grayscales/: 1BitGrayscale.gpl  4BitGrayscale.gpl  5BitGrayscale.gpl  6BitGrayscale.gpl
src/: CMakeLists.txt  FreeRTOSConfig.h  board_config.h  main.cpp  resources_config.h  sdk_config.h
src/FreeRTOS/: port_cmsis.c  port_cmsis_systick.c
src/components/accelerometer/: Accelerometer.cpp  Accelerometer.h
src/components/battery/: BatteryController.cpp  BatteryController.h
src/components/ble/: AlertNotificationClient.cpp  AlertNotificationClient.h  AlertNotificationService.cpp  AlertNotificationService.h  BatteryInformationService.cpp  BatteryInformationService.h  BleController.h  CallNotificationManager.cpp  CallNotificationManager.h  CurrentTimeClient.h  CurrentTimeService.cpp  CurrentTimeService.h  DeviceInformationService.h  DfuService.cpp  DfuService.h  FileService.cpp  FileService.h  FtpService.cpp  FtpService.h  ImmediateAlertService.cpp  ImmediateAlertService.h  MusicService.cpp  NimbleController.cpp  NimbleController.h  NotificationManager.cpp  NotificationManager.h  ServiceDiscovery.h
src/components/brightness/: BrightnessController.cpp  BrightnessController.h
src/components/datetime/: DateTimeController.cpp  DateTimeController.h
src/components/firmwarevalidator/: FirmwareValidator.cpp
src/components/fs/: FS.cpp  FS.h
src/components/littlefs/: FileSystem.cpp  FileSystem.h  LittleFs.cpp  LittleFs.h
src/components/motor/: Motor.cpp  Motor.h
src/components/settings/: Settings.cpp  Settings.h
src/components/vibration/: VibrationController.cpp  VibrationController.h
src/displayapp/: Apps.h  DisplayApp.cpp  DisplayApp.h  LittleVgl.cpp  LittleVgl.h  lv_pinetime_theme.c  lv_pinetime_theme.h
src/displayapp/fonts/: Readme.md  lv_font_clock_76.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_opensans_18.c  lv_font_opensans_20.c  lv_font_roboto_20.c  lv_font_robotol_20.c  lv_font_sys_20.c  lv_font_sys_48.c
src/displayapp/fonts/clock_font/: bombardment_70.c  calliope_fun_70.c  college_halo_70.c  evensong_hollow_70.c  freshman_70.c  gomarice_80.c  huskysta_70.c  incopins_clusters_70.c  lv_font_clock_42.c  lv_font_clock_70.c  lv_font_clock_90.c  lv_font_clock_90_b.c  matrix_3d_nc_70.c  matrix_nc_70.c  pong_48.c  prisma_70.c  sho_cardcaps_70.c  space_sport_70.c  stripy_reg_70.c  world_conflict_70.c
src/displayapp/icons/: background_16_1.c  background_16_2.c  bg_clock.c  bg_clock_1.c  bg_clock_2_b.c  bg_clock_3_b.c  bg_clock_w.c  bg_img_1.c  icon_brightness.c  icon_calc.c  icon_charging.c  icon_clock.c  icon_email.c  icon_error.c  icon_firmware.c  icon_folder.c  icon_game.c  icon_heart_rate.c  icon_help.c  icon_info.c  icon_information.c  icon_iot.c  icon_low_battery.c  icon_map.c  icon_music.c  icon_paddle.c  icon_phone.c  icon_qr_code.c  icon_raining.c  icon_running.c  icon_settings.c  icon_two.c  not_email.c  not_instantmessage.c  not_missedcall.c  not_schedule.c  not_sms.c  not_unknown.c  xmas.c
src/displayapp/screens/: About.cpp  About.h  ApplicationList.cpp  ApplicationList.h  BatteryIcon.cpp  Brightness.cpp  Charging.cpp  Charging.h  Clock.cpp  Clock.h  DropDownDemo.cpp  FileExplorer.cpp  FileExplorer.h  FileManager.cpp  FileManager.h  FirmwareUpdate.cpp  FirmwareUpdate.h  FirmwareValidation.cpp  FirmwareValidation.h  FlashLight.cpp  FlashLight.h  Gauge.cpp  HeartRate.cpp  HeartRate.h  IncomingCall.cpp  IncomingCall.h  InfiniPaint.cpp  Label.cpp  Label.h  List.cpp  List.h  LowBatt.cpp  LowBatt.h  Meter.cpp  Modal.cpp  Motion.cpp  Motion.h  Music.cpp  Notifications.cpp  Notifications.h  (+53 more)
src/displayapp/screens/settings/: QuickSettings.cpp  SettingDisplay.cpp  SettingDisplay.h  SettingSteps.cpp  SettingTimeFormat.cpp  SettingWakeUp.cpp  SettingWatchFace.cpp  SettingWatchFace.h  Settings.cpp  Settings.h
src/drivers/: BMA421.cpp  BMA421.h  BMA421Config.h  CST816S.md  Cst816s.cpp  Cst816s.h  FileSystem.cpp  FileSystem.h  HRS3300.cpp  HRS3300.h  SpiNorFlash.cpp  SpiNorFlash.h  St7789.cpp  St7789.h  TwiMaster.cpp  TwiMaster.h  Vibration.cpp  Vibration.h  Watchdog.cpp  Watchdog.h  __BMA421.cpp  __BMA421.h
src/libs/: lv_conf.h
src/libs/bma421/: bma421_config.h
src/libs/hrs3300/: HRS3300lib.cpp  HRS3300lib.h  hrs3300.c  hrs3300.h  hrs3300_reg_init.h
src/libs/mynewt-nimble/nimble/transport/dialog_cmac/src/: ble_hci_cmac_ll.c
src/libs/mynewt-nimble/porting/nimble/: Makefile.tinycrypt
src/libs/mynewt-nimble/porting/npl/freertos/src/: npl_os_freertos.c
src/systemtask/: SystemTask.cpp  SystemTask.h
tmp/: Clock copy.cpp  Clock copy.h  Clock.cpp  Clock.h
